#
# Change log of IntaRNA available at 
#
# https://github.com/BackofenLab/IntaRNA
#
################################################################################

development version

# IntaRNA
+ Zall (estimates) and derived output now available for all prediction models
+ outMode=E : report of ensemble information only

# API
* OutputHandler requires an OutputConstraint instances in construction
* Predictor objects now access OutputConstraint instances via the OutputHandler;
  this simplifies the signature of the member functions
* OutputConstraint now guides whether or not Zall is required for output
+ OutputHandlerEnsemble: reports ensemble information only
  

190906 Martin Raden :
 * tests/runIntaRNA.sh :
   * tests are run for all data/*.parameter files (no explicit listing anymore)
 + tests/*-modelX|S : explicitly testing model=X or =S
 * IntaRNA/PredictorMfe2dHeuristicSeed :
   * fillHybridE() : updateOptima() now called for all tested cases to reduce
     heuristic bias in subopt listing
 * IntaRNA/PredictorMfeEns :
   * renaming Z_partitions to Z_partition
   + updateOptimaUsingZ() : calls updateOptima() for all Z_partition entries
   + reportOptima() : calls updateOptimaUsingZ() and super class reportOptima()
   + traceBack() : central traceback for all ensemble-based predictors
 * IntaRNA/PredictorMfeEns2d :
   - traceBack()
   * predict() :
     - explicit updateOptima() calls
 * IntaRNA/PredictorMfeEns2dHeuristic :
   * predict() :
     - explicit updateOptima() calls
   * fillHybridZ() :
     + explicit updateZ() calls for all recursion cases to reduce heuristic bias
 * IntaRNA/PredictorMfe2dSeedExtension :
   - updateOptima() : obsolete
   * predict() :
     + explicit j boundary computation to reduce considered index tuples when
       updating optima
 * IntaRNA/PredictorMfe2dSeedExtensionRIblast :
   - updateOptima() : obsolete
 * IntaRNA/PredictorMfe2dHeuristicSeedExtension :
   * rename updateOptima() to updateOptimalRightExt()